# simple-rag

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  debug_retrieval.py  future_removals.md  main.py  pyproject.toml  pyrightconfig.json  pytest.ini  rag_cli.py  ruff.toml  test_file.txt  test_intent.py  test_mistral_integration.py
.streamlit/: secrets.toml
app/: main.py
app/api/: ingest.py  query.py
app/cli/: __init__.py  commands.py
app/core/: config.py  exceptions.py  logging_config.py  models.py
app/db/: schema.sql
app/ingest/: chunker.py  pdf_extractor.py
app/llm/: mistral_client.py  prompts.py
app/logic/: intent.py  postprocess.py
app/retriever/: fusion.py  index.py  keyword.py  semantic.py
docs/: architecture-flow.md
src/app/: main.py
src/app/api/: collections.py  ingest.py  query.py
src/app/cli/: commands.py
src/app/core/: config.py  interfaces.py  models.py  monitoring.py
src/app/db/: schema.sql
src/app/ingest/: chunker.py  pdf_extractor.py
src/app/llm/: mistral_client.py  prompts.py
src/app/logic/: intent.py  postprocess.py
src/app/retriever/: fusion.py  index.py  semantic.py
src/app/services/: __init__.py  query_service.py
src/tests/: test_chunker.py  test_config.py  test_fusion.py  test_semantic.py
src/ui/: README.md  streamlit_app.py  streamlit_app_backup.py
src/ui/components/: chat.py  progress.py  sidebar.py  status.py
src/ui/handlers/: query_handler.py  upload_handler.py
src/ui/styles/: css.py
src/ui/utils/: session_state.py  ui_helpers.py
tests/: test_chunker.py  test_fusion.py  test_monitoring.py  test_semantic.py  test_tfidf.py
ui/: streamlit_app.py
