[project]
name = "simple-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "numpy>=2.3.2",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-multipart>=0.0.20",
    "streamlit>=1.48.1",
    "uvicorn>=0.35.0",
    "typer>=0.13.1",
    "rich>=13.9.4",
    "mistralai>=1.9.6",
    "aiosqlite>=0.20.0",
    "httpx>=0.25.0",
    "pymupdf>=1.26.3",
]

[dependency-groups]
dev = [
    "basedpyright>=1.31.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-benchmark>=5.1.0",
    "ruff>=0.12.9",
    "pydantic-settings>=2.10.1",
    "psutil>=6.0.0",
    "poethepoet>=0.37.0",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 90
target-version = "py313"

[project.scripts]
rag = "app.cli.commands:app"

[tool.poe.tasks]
streamlit-app = "streamlit run src/ui/streamlit_app.py"
api = "streamlit run src/ui/streamlit_app.py"
test-api = "bash -c 'echo \"Starting FastAPI server...\" && uv run uvicorn app.main:app --port 8001 & SERVER_PID=$!; sleep 5; echo \"Testing health endpoint:\"; curl -s http://localhost:8001/health; echo \"\"; echo \"Testing query endpoint:\"; curl -s -X POST http://localhost:8001/query -H \"Content-Type: application/json\" -d \"{\\\"query\\\":\\\"What is this about? Do not mention any PII\\\"}\" | uv run python -m json.tool; kill $SERVER_PID 2>/dev/null || true'"
test-query = "rag query \"What are the main topics discussed?\" --k 5"
